--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>XD</h1>
+      <script src="https://toyotafinancial--salt001.lightning.force.com/lightning/lightning.out.js"></script>
   </body>
 </html>
