--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>XD</h1>
       <script src="https://toyotafinancial--salt001.lightning.force.com/lightning/lightning.out.js"></script>
+      <script>$Lightning.use("c:pruebita2", function() {
+        $Lightning.createComponent("c:frontofficeCasosDespacho",{}, function(cmp) { console.log("LWC component was created"); }); 
+       },"toyotafinancial--salt001.lightning.force.com")</script>
   </body>
 </html>
