--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
       <meta charset="utf-8">
       <title>Prueba projecto</title>
   </head>
-  <body>
+  <body> 
     <h1>XD</h1>
+      <div id="lightning"></div>
       <script src="https://toyotafinancial--salt001.lightning.force.com/lightning/lightning.out.js"></script>
-      <script>$Lightning.use("c:pruebita2", function() {
-        $Lightning.createComponent("c:frontofficeCasosDespacho",{}, function(cmp) { console.log("LWC component was created"); }); 
-       },"toyotafinancial--salt001.lightning.force.com")</script>
+      <script>
+          $Lightning.use("c:pruebita2", () => {
+                $Lightning.createComponent("c:frontofficeCasosDespacho",{}, "lightning", () => { console.log("LWC component was created"); }); 
+          },'toyotafinancial--salt001.lightning.force.com/');
+      </script>
   </body>
 </html>
